--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
-    <h1>It has begun!</h1>
+  <body style="background-image: url(<%= picture %>)" id="bg">
+
   </body>
 </html>
