--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body style="background-image: url(<%= picture %>)" id="bg">
+<%- include("../partials/header"); -%>
 
-  </body>
-</html>
+    <!-- <div id="registration-form">
+      <form id="registration-form" class="" action="/registration" method="post">
+        <input type="text" name="name" value="">
+      </form>
+    </div> -->
+
+
+<div class="" id="greeting"></div>
+  <div id="form-container">
+    
+  </div>
+
+
+
+<%- include("../partials/footer"); -%>
+
+
+<!-- <form class="item" action="/" method="post">
+  <input autocomplete="off" type="text" name="todo" placeholder="New Item">
+  <button type="submit" name="list" value=< title >>+</button>
+</form> -->
