--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,23 +1,11 @@
 <%- include("../partials/header"); -%>
 
-    <!-- <div id="registration-form">
-      <form id="registration-form" class="" action="/registration" method="post">
-        <input type="text" name="name" value="">
-      </form>
-    </div> -->
 
+<h1 class="area">Momentos</h1>
 
-<div class="" id="greeting"></div>
-  <div id="form-container">
+<p>To Sign In click <a href="/signin"><b>here!</b></a></p>
 
-  </div>
-
+<p>To Sign up click <a href="/signup"><b>here!</b></a></p>
 
 
 <%- include("../partials/footer"); -%>
-
-
-<!-- <form class="item" action="/" method="post">
-  <input autocomplete="off" type="text" name="todo" placeholder="New Item">
-  <button type="submit" name="list" value=< title >>+</button>
-</form> -->
