Headers error on multiple res is fixed now

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,8 +14,17 @@ body {
   font-size: 2em;
 }
 
+.flash-message {
+  text-align: center;
+}
 
+.error-messages {
+  float: right;
+}
 
+.signup-form {
+  float: left;
+}
 
 
 
