--- a/views/partials/signUpForm.ejs
+++ b/views/partials/signUpForm.ejs
@@ -1,22 +1,22 @@
-<div class="error-messages">
-  <% if(error_msg.length > 0) { %>
-      <%  error_msg.forEach(error => { %>
-         <div class="alert alert-danger flash-message container">
-        <%= error.msg %>
-        </div>
-      <%  }) %>
-  <% } %>
-
-  <% if(error.length > 0) { %>
-      <%  error.forEach(error => { %>
-         <div class="alert alert-danger flash-message container">
-        <%= error %>
-        </div>
-      <%  }) %>
-  <% } %>
-</div>
-
 <div class="container signup-form">
+  <div class="error-messages">
+    <% if(error_msg.length > 0) { %>
+        <%  error_msg.forEach(error => { %>
+           <div class="alert alert-danger flash-message container">
+          <%= error.msg %>
+          </div>
+        <%  }) %>
+    <% } %>
+
+    <% if(error.length > 0) { %>
+        <%  error.forEach(error => { %>
+           <div class="alert alert-danger flash-message container">
+          <%= error %>
+          </div>
+        <%  }) %>
+    <% } %>
+  </div>
+
   <form class="box" action="/register" method="post">
     <h1>SIGN UP</h1>
     <!-- <label for="username">Username</label> -->
@@ -44,6 +44,6 @@
             name="password2"
             placeholder="Confirm Password"
     />
-    <input type="submit" name="" value="Sign Up">
+    <input id="register-form" type="submit" name="" value="Sign Up">
   </form>
 </div>
